<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5F4D0"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="166dp"
        android:layout_height="85dp"
        android:layout_marginTop="176dp"
        android:clickable="true"
        android:onClick="showRules"
        android:text="@string/rules_button"
        app:iconTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="166dp"
        android:layout_height="85dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:onClick="showPlayingField"
        android:text="@string/play_button"
        app:iconTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="342dp"
        android:layout_height="63dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="@font/adamina"
        android:text="@string/greeting_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="358dp"
        android:layout_height="71dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3">

        <TextView
            android:id="@+id/consonants_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_consonants"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/consonants_seekBar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:contentDescription="@string/seek_bar_description"
            android:focusable="true"
            android:max="21"
            android:progress="9"
            android:progressTint="#2A47E8"
            android:scrollbarSize="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/vowels_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_vowels"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/vowels_seekBar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:contentDescription="@string/seek_bar_description"
            android:focusable="true"
            android:max="5"
            android:progress="0"
            android:progressTint="#2A47E8"
            android:scrollbarSize="5dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>